kubernetes-monitoring/nginx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9113'
    spec:
     containers:
     - name: nginx
       image: garamer/nginx:v.1.0
       ports:
         - containerPort: 80
       volumeMounts:
       - name: config-nginx
         mountPath: /etc/nginx/
     - name: nginx-exporter
       image: nginx/nginx-prometheus-exporter:0.10.0
       args:
        - '-nginx.scrape-uri=http://51.250.36.38/basic_status'
       ports:
         - containerPort: 9113
     volumes:
     - name: config-nginx
       configMap:
         name: nginx-configmap

---
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
   app: nginx
 annotations:
   prometheus.io/scrape: 'true'
   prometheus.io/port: '9113'
   prometheus.io/scheme: http
spec:
 selector:
  app: nginx
 type: ClusterIP
 ports:
  - name: nginx
    port: 80
    targetPort: 80
  - name: nginx-exporter
    port: 8081
    targetPort: 9113

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
           name: nginx-service
           port:
            number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
           name: nginx-service
           port:
            number: 80
